Update ogc api
